Issue 119 (#25)
* Working on possible solutions to the bug. Found three possibilities i should discuss with team.(pointers rather than actual values, using sql.NullDataType, and
gopkg.in/guregu/null.v3 package which seems promising as it can be unmarshalled easily.)

* Have a working go.validate solution as well as a working gorm not null solution working. I need feedback on which to move forward with, as both are significant changes.

* got go validate working for penalties, and changed all penalty fields to be required.

* Added "required" validation for goals

* Working on venues validation, but now docs aren't working for it.

* Working on bug in the games endpoint.

* added validation for leagues and games.

* Added validation to rosters.

* got validation working for seasons

* added validation to teams. Also changed the team field in game to use a pointer so that it didn't auto fail the recursive validation.

---------
