# backend/internal/server/apis/sports/stats/venues.go
@@ -8,6 +8,7 @@ import (
 	"github.com/jak103/powerplay/internal/models"
 	"github.com/jak103/powerplay/internal/utils/responder"
 	"github.com/jak103/powerplay/internal/server/services/auth"
+	"github.com/go-playground/validator/v10"
 )
 
 func init() {
@@ -24,6 +25,12 @@ func postVenueHandler (c *fiber.Ctx) error {
 	if err != nil {
 		log.WithErr(err).Error("Failed to parse venue request payload")
 		return responder.BadRequest(c, "Failed to parse venue request payload")
+	}
+
+	validate := validator.New()
+	err = validate.Struct(venueRequest)
+	if err != nil {
+		return responder.BadRequest(c, "Failed to validate request")
 	}
 
 	db := db.GetSession(c)
